contact add send inquiry

--- a/templates/4-panel-fibc-bags.html
+++ b/templates/4-panel-fibc-bags.html
@@ -13,7 +13,7 @@
         <h1 class="text-dark fw-bold mb-3">4 Panel FIBC</h1>
         <p>The standard <strong>FIBC bag</strong> is the 4-Panel big bag, or the corner loop big bag. This standard big bag with (standard) open top, closed bottom and four lifting loops, is very suitable for transporting and storing various types of light and finer raw materials, waste materials and building materials such as ornamental gravel, split, garden waste, firewood and wood pellets. Because of the four corner loop lifting loops, stitched at the side seams, the <strong>big bag</strong> is easy to lift.</p>
         <p><strong>Four (4) panel bulk bags</strong> (FIBC) have seams along four separate pieces of fabric that are sewn together to construct the body of the bag as well as having the top and bottom panels sewn in. Four panel bags tend to hold their shape better than other types of bags and are better suited for stacking.</p>
-        <a href="contact.html" class="btn btn-primary mt-3">Send Inquiry</a>
+<a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
       </div>
 
       <!-- Right Side: Image -->
