--- a/templates/conical-fibc-bags.html
+++ b/templates/conical-fibc-bags.html
@@ -12,10 +12,8 @@
       <h1 class="display-5">Conical FIBC</h1>
     </div>
     <div class="col-md-3 text-md-end">
-      <a href="https://www.alpinefibc.com/contact-us/" class="btn btn-primary btn-lg d-inline-flex align-items-center">
-        SEND INQUIRY
-        <i class="bi bi-arrow-right-circle ms-2"></i>
-      </a>
+      <a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+
     </div>
   </div>
 
