--- a/templates/fibc-bags.html
+++ b/templates/fibc-bags.html
@@ -18,9 +18,8 @@
         </p>
       </div>
       <div class="col-md-3 text-center text-md-end mt-3">
-  <a href="contact.html" class="btn btn-primary btn-lg">
-    SEND INQUIRY <i class="bi bi-arrow-right-circle ms-2"></i>
-  </a>
+  <a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+
 </div>
 
     </div>
