--- a/templates/food-grade-fibc-bags.html
+++ b/templates/food-grade-fibc-bags.html
@@ -15,7 +15,7 @@
         <p><strong>SHRI KHEMISATI </strong> is a BRC certified company. Our food grade bags are free from dust, germs, and pollutants due to 5% statistical quality control inspection after palletizing. We ensure vacuum cleaning and pallet shrink wrapping for all food grade bags.</p>
 
         <p>With our expertise in producing the highest quality food grade FIBC bags, and our strict hygiene policy, we successfully fulfill customer requirements with confidence and consistency.</p>
-        <a href="contact.html" class="btn btn-primary mt-3">Send Inquiry</a>
+<a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
 
       </div>
 
