--- a/templates/pp-woven-ground-cover.html
+++ b/templates/pp-woven-ground-cover.html
@@ -36,7 +36,7 @@
         <li>Cover the paid fabric with a good layer of bark, stone chipping, cocoa shell etc. It is important to remove existing grass and weeds by hand or with a systemic weed killer</li>
         <li>To ensure effective weed suppression make sure mulch depth is maintained to a minimum of 50mm</li>
       </ul>
-      <a href="contact.html" class="btn btn-primary mt-3">Send Inquiry</a>
+<a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
 
     </div>
     <div class="col-md-3">
