--- a/templates/baffle-fibc-bags.html
+++ b/templates/baffle-fibc-bags.html
@@ -34,7 +34,7 @@
 
       <!-- Button -->
     <div class="col-md-3 text-md-end text-center mt-3 mt-md-0">
-<a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+<a href="{% url 'contact' %}" class="btn btn-primary mt-3">Send Inquiry</a>
     </div>
     </div>
 
