--- a/templates/conductive-fibc-bags.html
+++ b/templates/conductive-fibc-bags.html
@@ -13,7 +13,7 @@
         <h1 class="text-dark fw-bold mb-3">Conductive FIBC</h1>
         <p><strong>Conductive bags</strong> are bags that conduct the charges generated at the time of filling & emptying of the products. During the stage of bulk bag filling and emptying operations, it is ensured that the ground or earth bonding points are connected to a system ground or earth. Moreover, when the conductive yarns and the connection to ground or earth is interconnected during these operations, the use of Type C FIBC bags becomes critically safe. These are essential in explosive environments or where the products generate charges that could lead to explosion hazards.</p>
         <p><strong>Conductive bags</strong> are used for handling of explosive material.</p>    
-<a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+<a href="{% url 'contact' %}" class="btn btn-primary mt-3">Send Inquiry</a>
       </div>
 
       <!-- Right Side: Image -->
