--- a/templates/fibc-bags.html
+++ b/templates/fibc-bags.html
@@ -18,7 +18,7 @@
         </p>
       </div>
       <div class="col-md-3 text-center text-md-end mt-3">
-  <a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+  <a href="{% url 'contact' %}" class="btn btn-primary mt-3">Send Inquiry</a>
 
 </div>
 
