--- a/templates/pharma-grade-fibc-bags.html
+++ b/templates/pharma-grade-fibc-bags.html
@@ -13,7 +13,7 @@
         <p>Pharma Grade FIBC Bags are exclusively designed for pharmaceutical products so that the products are in very good condition and are free from unwanted contamination. Food Grade FIBC Bags are made with the objective of putting food grade raw material into bags.</p>
         <p>Relevant authorities approve the raw materials and fabrics used in the production of Pharma Grade Bags. We ensure that metal detection and cleaning process is applied, to prevent the bags from dust, germs and pollutants.</p>
         <p>Individual inspection of the bags on the light table is always performed. We make sure that loose threads and tapes are prevented.</p>
-<a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+<a href="{% url 'contact' %}" class="btn btn-primary mt-3">Send Inquiry</a>
       </div>
     </div>
     <hr class="my-4 border-2 border-secondary"></hr>
