--- a/templates/conical-fibc-bags.html
+++ b/templates/conical-fibc-bags.html
@@ -12,7 +12,7 @@
       <h1 class="display-5">Conical FIBC</h1>
     </div>
     <div class="col-md-3 text-md-end">
-      <a href="{% url 'contact_html' %}" class="btn btn-primary mt-3">Send Inquiry</a>
+      <a href="{% url 'contact' %}" class="btn btn-primary mt-3">Send Inquiry</a>
 
     </div>
   </div>
