footer add biz499.in

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -118,7 +118,7 @@
     <!-- Footer Bottom -->
     <div class="text-center border-top border-white pt-3 mt-3 pb-4 small">
       COPYRIGHTS © 2025, <strong>SHRI KHEMISATI PVT. LTD.</strong> | ALL RIGHTS RESERVED. POWERED BY 
-      <a href="#" class="text-white text-decoration-none"><strong>8WEBCOM.COM</strong></a>
+      <a href="#" class="text-white text-decoration-none"><strong>biz499.in</strong></a>
     </div>
   </div>
 </footer>
