Biz499 Marketing Agency add

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -115,12 +115,11 @@
   </p>
 </div>
 
-   <!-- Footer Bottom -->
+  <!-- Footer Bottom -->
 <div class="text-center border-top border-white pt-3 mt-3 pb-4 small">
-  COPYRIGHTS © 2025, <strong>SHRI KHEMISATI PVT. LTD.</strong> | ALL RIGHTS RESERVED. POWERED BY 
-  <a href="https://biz499.in" target="_blank" class="text-white text-decoration-none">
-    <strong>biz499.in</strong>
-  </a>
+  COPYRIGHTS © 2025, <strong>SHRI KHEMISATI PVT. LTD.</strong> | ALL RIGHTS RESERVED. 
+  Designed by <strong>Biz499 Marketing Agency</strong>
 </div>
+
 
 </footer>
