--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -120,7 +120,7 @@
 <div class="text-center border-top border-white pt-3 mt-3 pb-4 small">
   COPYRIGHTS © 2025, <strong>SHRI KHEMISATI PVT. LTD.</strong> | ALL RIGHTS RESERVED.
   Designed by 
-  <a href="https://bootstrapmade.com/" target="_blank" class="text-white text-decoration-none">
+  <a href="https://biz499.in/" target="_blank" class="text-white text-decoration-none">
     Biz499 Marketing Agency
   </a>
 </div>
