--- a/templates/index.html
+++ b/templates/index.html
@@ -227,11 +227,11 @@
       <!-- Product 1 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="{% url 'circular_fibc' %}" class="text-decoration-none">
-  <img src="{% static 'images/products/CIRCULAR-FIBC.jpg' %}" class="img-fluid mb-2" alt="CIRCULAR-FIBC">
-  <div class="bg-primary text-white py-2 fw-semibold">CIRCULAR-FIBC</div>
-</a>
-
+        <a href="circular-fibc.html" class="text-decoration-none">
+          <img src="{% static 'images/products/CIRCULAR-FIBC.jpg' %}" class="img-fluid mb-2" alt="CIRCULAR-FIBC">
+          <div class="bg-primary text-white py-2 fw-semibold">CIRCULAR-FIBC</div>
+        </div>
+        </a>
       </div>
       <!-- Product 2 -->
       <div class="col-md-3 col-6">
