--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
       <!-- Product 2 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="conductive-fibc-bags.html" class="text-decoration-none">
+        <a href="{% url 'conductive-fibc-bags' %}" class="text-decoration-none">
           <img src="{% static 'images/products/CONDUCTIVE-FIBC.jpg' %}" class="img-fluid mb-2" alt="CONDUCTIVE-FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">CONDUCTIVE-FIBC</div>
         </div>
@@ -245,7 +245,7 @@
       <!-- Product 3 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="food-grade-fibc-bags.html" class="text-decoration-none">
+        <a href="{% url 'food_grade_fibc_bags' %}" class="text-decoration-none">
           <img src="{% static 'images/products/FOOD-GRADE-FIBC.jpg' %}" class="img-fluid mb-2" alt="Food Grade FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">FOOD GRADE FIBC</div>
         </div>
@@ -254,7 +254,7 @@
       <!-- Product 4 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-         <a href="fibc-liners.html" class="text-decoration-none">
+         <a href="{% url 'fibc_liners' %}" class="text-decoration-none">
           <img src="{% static 'images/products/ONE-LOOP-TWO-LOOP.jpg' %}" class="img-fluid mb-2" alt="One/Two Loop FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">ONE/TWO LOOP FIBC</div>
         </div>
@@ -263,7 +263,7 @@
       <!-- Product 5 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="pharma-grade-fibc-bags.html" class="text-decoration-none">
+        <a href="{% url 'pharma_grade_fibc_bags' %}" class="text-decoration-none">
           <img src="{% static 'images/products/PLATTEN-BAG.jpg' %}" class="img-fluid mb-2" alt="PLATTEN-BAG">
           <div class="bg-primary text-white py-2 fw-semibold">PLATTEN-BAG</div>
         </div>
@@ -272,7 +272,7 @@
       <!-- Product 6 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-         <a href="pp-woven-ground-cover.html" class="text-decoration-none">
+         <a href="{% url 'pp_woven_ground_cover' %}" class="text-decoration-none">
           <img src="{% static 'images/products/PP-GROUND-COVER.jpg' %}" class="img-fluid mb-2" alt="PP-GROUND-COVER">
           <div class="bg-primary text-white py-2 fw-semibold">PP-GROUND-COVER</div>
         </div>
@@ -281,7 +281,7 @@
       <!-- Product 7 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-         <a href="pp-woven-ground-cover.html" class="text-decoration-none">
+         <a href="{% url 'pp_woven_ground_cover' %}" class="text-decoration-none">
           <img src="{% static 'images/products/PP-WOVEN-FABRICS.jpg' %}" class="img-fluid mb-2" alt="PP-WOVEN-FABRICS">
           <div class="bg-primary text-white py-2 fw-semibold">PP-WOVEN-FABRICS</div>
         </div>
@@ -290,7 +290,7 @@
       <!-- Product 8 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="fibc-bags.html" class="text-decoration-none">
+        <a href="{% url 'fibc_bags' %}" class="text-decoration-none">
           <img src="{% static 'images/products/TUNNEL-LOOP-FIBC.jpg' %}" class="img-fluid mb-2" alt="TUNNEL-LOOP-FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">TUNNEL-LOOP-FIBC</div>
         </div>
@@ -299,7 +299,7 @@
       <!-- Product 9 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-          <a href="u-panel-fibc.html" class="text-decoration-none">
+          <a href="{% url 'u_panel_fibc' %}" class="text-decoration-none">
          <img src="{% static 'images/products/U-PANEL-BUILDER-FIBC.jpg' %}" class="img-fluid mb-2" alt="U-PANEL-BUILDER-FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">U-PANEL-BUILDER-FIBC</div>
         </div>
@@ -308,7 +308,7 @@
       <!-- Product 10 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="ventilated-fibc-bags.html" class="text-decoration-none">
+        <a href="{% url 'ventilated_fibc_bags' %}" class="text-decoration-none">
           <img src="{% static 'images/products/VENTILATED-FIBC.jpg' %}" class="img-fluid mb-2" alt="VENTILATED-FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">VENTILATED-FIBC</div>
         </div>
@@ -317,7 +317,7 @@
       <!-- Product 11 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-         <a href="about.html" class="text-decoration-none">
+         <a href="{% url 'about' %}" class="text-decoration-none">
         <img src="{% static 'images/products/WOVEN-SACK.jpg' %}" class="img-fluid mb-2" alt="WOVEN-SACK">
           <div class="bg-primary text-white py-2 fw-semibold">WOVEN-SACK</div>
         </div>
@@ -326,7 +326,7 @@
       <!-- Product 12 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-         <a href="baffle-fibc-bags.html" class="text-decoration-none">
+         <a href="{% url 'baffle_fibc_bags' %}" class="text-decoration-none">
         <img src="{% static 'images/products/BAFFLE-FIBC.jpg' %}" class="img-fluid mb-2" alt="BAFFLE-FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">BAFFLE-FIBC</div>
         </div>
