--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
       <!-- Product 2 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
-        <a href="{% url 'conductive-fibc-bags' %}" class="text-decoration-none">
+        <a href="{% url 'conductive_fibc_bags' %}" class="text-decoration-none">
           <img src="{% static 'images/products/CONDUCTIVE-FIBC.jpg' %}" class="img-fluid mb-2" alt="CONDUCTIVE-FIBC">
           <div class="bg-primary text-white py-2 fw-semibold">CONDUCTIVE-FIBC</div>
         </div>
