--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
         <img src="{% static 'images/chemical.png' %}" alt="Chemical" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">CHEMICAL</h6>
         <p>Chemical</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+        <a href="{% url 'u_panel_fibc' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/pharmaceutical.jpg' %}" alt="Pharmaceutical" class="img-fluid mb-2 industry-img">
