--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
         <img src="{% static 'images/pharmaceutical.jpg' %}" alt="Pharmaceutical" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">PHARMACEUTICAL</h6>
         <p>Pharmaceutical</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'circular_fibc' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/fertilizers.jpg' %}" alt="Fertilizers" class="img-fluid mb-2 industry-img">
