--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
         <img src="{% static 'images/fertilizers.jpg' %}" alt="Fertilizers" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">FERTILIZERS</h6>
         <p>Fertilizers</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'baffle_fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/food.jpg' %}" alt="Food" class="img-fluid mb-2 industry-img">
