--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
         <img src="{% static 'images/food.jpg' %}" alt="Food" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">FOOD</h6>
         <p>Food Products</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'un_fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/fiberglass.jpg' %}" alt="Fiberglass" class="img-fluid mb-2 industry-img">
@@ -169,7 +169,7 @@
         <img src="{% static 'images/waste-material.jpg' %}" alt="Waste Material" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">WASTE MATERIAL</h6>
         <p>Waste Material</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'ventilated_fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
     </div>
   </div>
