--- a/templates/index.html
+++ b/templates/index.html
@@ -121,25 +121,25 @@
         <img src="{% static 'images/grains.jpg' %}" alt="Grains" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">GRAINS</h6>
         <p>Grains</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'conductive_fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/pigment1.jpg' %}" alt="Pigments" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">PIGMENTS</h6>
         <p>Pigments</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'fibc_liners' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/plastics.jpg' %}" alt="Plastics" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">PLASTICS</h6>
         <p>Plastics</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'pp_woven_ground_cover' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/construction.jpg' %}" alt="Construction" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">CONSTRUCTION</h6>
         <p>Construction</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/refractories.jpg' %}" alt="Refractories" class="img-fluid mb-2 industry-img">
@@ -157,13 +157,13 @@
         <img src="{% static 'images/peanuts.jpg' %}" alt="Peanuts" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">PEANUTS</h6>
         <p>Peanuts</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'dissipative_fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/starch.jpg' %}" alt="Starch" class="img-fluid mb-2 industry-img">
         <h6 class="fw-bold">STARCH</h6>
         <p>Starch</p>
-        <a href="about.html" class="btn btn-outline-primary btn-sm">+ Readmore</a>
+<a href="{% url 'food_grade_fibc_bags' %}" class="btn btn-outline-primary btn-sm">+ Readmore</a>
       </div>
       <div>
         <img src="{% static 'images/waste-material.jpg' %}" alt="Waste Material" class="img-fluid mb-2 industry-img">
