--- a/templates/index.html
+++ b/templates/index.html
@@ -355,7 +355,7 @@
       <div class="col-md-4">
         <h6 class="text-primary fw-bold">WHY USE FIBC’S?</h6>
         <p>FIBC’s are a durable, light weight alternative versus other forms of semi-bulk packaging including multi-walled corrugated boxes and plastic or metal bins. Tare weights for FIBC’s are typically 5-6 lbs.</p>
-<a href="{% url 'why_use_fibcs' %}" class="btn btn-outline-dark btn-sm">
+        <a href="why-use-fibcs.html" class="btn btn-outline-dark btn-sm">
           <i class="bi bi-play-fill me-1"></i> + Readmore
         </a>
       </div>
