--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -109,8 +109,8 @@
     <i class="bi bi-geo-alt-fill me-1"></i>
     <strong>US Office:</strong><br>
     633 Dunster Ln, Saginaw TX 76131<br>
-    Phone: +1 973-615-7346<br>
-    Contact: Anup Poddar<br>
+    Phone: +1 227 277 2463<br>
+    Contact: Mr Manish Tibrewal <br>
     <i class="bi bi-envelope-fill me-1"></i>export@khemisatiindia.com
   </p>
 
